--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -1,8 +1,5 @@
 {{ define "body" }}
-<section
-  class="hero has-background-primary-15 is-halfheight has-text-centered"
-  style="padding-bottom: 3rem; padding-top: 3rem"
->
+<section class="hero has-background-primary-15 is-halfheight has-text-centered">
   <div class="hero-body">
     <div class="container has-text-centered">
       <p class="title has-text-primary-15-invert" style="margin-bottom: 1rem">
