--- a/layouts/actualites/single.html
+++ b/layouts/actualites/single.html
@@ -1,6 +1,6 @@
 {{ define "body" }}
 <section
-  class="hero has-background-primary-15 is-halfheight has-text-centered is-large"
+  class="hero has-background-primary-15 is-halfheight has-text-centered"
   style="background-image: url('/actualites/{{.Params.picture}}.jpeg'); background-size: cover; background-position: center;"
 >
   <div class="hero-body">
