--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -187,13 +187,21 @@
 
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" href="/qui-sommes-nous"> Qui sommes-nous ? </a>
-        <a class="navbar-item" href="/calendar"> Calendrier </a>
-        <a class="navbar-item" href="/actualites"> Actualités </a>
+        <a class="navbar-item" href="/qui-sommes-nous">Qui sommes-nous ?</a>
+        <a class="navbar-item" href="/calendrier">Calendrier</a>
+        <a class="navbar-item" href="/actualites">Actualités</a>
+        <a class="navbar-item" href="/devenir-membre">Devenir Membre</a>
       </div>
 
       <div class="navbar-end">
         <div class="navbar-item">
+          <a
+            class="navbar-item has-text-warning"
+            href="/nous-soutenir"
+            style="padding-left: 0"
+          >
+            Nous Soutenir
+          </a>
           <div class="buttons">
             <a class="button is-warning" href="/contact">
               <strong>Contact</strong>
