--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,25 +1,21 @@
 {{ define "body" }}
 <section
-  class="hero has-background-primary-15 is-halfheight has-text-centered is-large"
+  class="hero has-background-primary-15 is-halfheight has-text-centered"
   style="background-image: url('/actualites/{{.Params.picture}}.jpeg'); background-size: cover; background-position: center;"
 >
   <div class="hero-body">
     <div class="container has-text-centered">
       <div class="container has-text-centered">
         <p class="title has-text-primary-15-invert">{{ .Title }}</p>
+        <p class="subtitle has-text-primary-15-invert">{{ .Params.subtitle}}</p>
       </div>
     </div>
   </div>
 </section>
 
-<section class="section has-text-centered is-max-desktop">
-  <div class="container is-max-desktop"></div>
-  <div class="container has-text-centered"></div>
-</section>
-
 <section class="section is-max-desktop has-text-centered">
-  <div class="container is-max-desktop">
-    <div class="content">{{ .Content }}</div>
+  <div class="container is-max-desktop columns is-8">
+    <div class="content column has-text-justified">{{ .Content }}</div>
   </div>
 </section>
 {{ end }}
