--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,9 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong> Fully en transition · 2024 </strong>
+      <strong> Fully en transition · 2021 - 2025 </strong>
     </p>
+    <p>Rue de l'Église 14, 1926 Fully</p>
     <div class="container">
       <a href="https://www.instagram.com/fully.transition/">
         <span class="icon is-medium">
