--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -1,4 +1,35 @@
 {{ define "body" }}
+<script
+  type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
+></script>
+<script type="text/javascript">
+  (function () {
+    // https://dashboard.emailjs.com/admin/account
+    emailjs.init({
+      publicKey: "1ZfMf51GzPNDLTHnF",
+    });
+  })();
+</script>
+<script type="text/javascript">
+  window.onload = function () {
+    document
+      .getElementById("contact-form")
+      .addEventListener("submit", function (event) {
+        event.preventDefault();
+        // these IDs from the previous steps
+        emailjs.sendForm("contact_service", "contact_form", this).then(
+          () => {
+            console.log("SUCCESS!");
+          },
+          (error) => {
+            console.log("FAILED...", error);
+          }
+        );
+      });
+  };
+</script>
+
 <section class="hero has-background-primary-15 is-halfheight has-text-centered">
   <div class="hero-body">
     <div class="container has-text-centered">
@@ -34,39 +65,17 @@
           </p>
         </div>
 
-        <div class="container is-small" style="margin-top: 2rem">
-          <div class="field" style="margin-bottom: 2rem">
-            <label class="label">Email</label>
-            <div class="control has-icons-left has-icons-right">
-              <input
-                class="input is-danger is-small"
-                type="email"
-                placeholder="Votre adresse Email"
-                value=" "
-              />
-              <span class="icon is-small is-left">
-                <i class="fas fa-envelope"></i>
-              </span>
-              <span class="icon is-small is-right">
-                <i class="fas fa-exclamation-triangle"></i>
-              </span>
-            </div>
-            <p class="help is-danger">Cet email n'est pas valide</p>
-          </div>
-
-          <div class="field is-small" style="margin-bottom: 2rem">
-            <label class="label is-small">Message</label>
-            <div class="control">
-              <textarea class="textarea" placeholder="Votre message"></textarea>
-            </div>
-          </div>
-
-          <div class="field is-grouped" style="margin-top: 2rem">
-            <div class="control">
-              <button class="button is-warning">Envoyer</button>
-            </div>
-          </div>
-        </div>
+        <form id="contact-form">
+          <!-- To simplify the tutorial, the value is static. -->
+          <input type="hidden" name="contact_number" value="697483" />
+          <label>Name</label>
+          <input type="text" name="user_name" />
+          <label>Email</label>
+          <input type="email" name="user_email" />
+          <label>Message</label>
+          <textarea name="message"></textarea>
+          <input type="submit" value="Send" />
+        </form>
       </div>
     </section>
   </div>
