small text corrections

--- a/layouts/_default/contact.html
+++ b/layouts/_default/contact.html
@@ -55,27 +55,20 @@
           class="container has-text-centered is-normal"
           style="margin-bottom: 2rem"
         >
-          <h2 class="title" style="margin-bottom: 1rem">Nous contacter</h2>
+          <h2 class="title" style="margin-bottom: 1rem">Nous sommes à votre écoute
+          </h2>
+          <p class="content is-normal" style="margin-bottom: 1rem"></p>
           <p class="content is-normal" style="margin-bottom: 1rem">
-            Des questions, des idées de projets ou envie de nous rejoindre ?
+            <p>N'hésitez pas à
+            nous contacter, nous serions ravis de faire votre rencontre !</p>
           </p>
-          <p class="content is-normal" style="margin-bottom: 1rem">
-            N'hésitez pas à nous contacter, nous serions ravis de faire votre
-            rencontre !
+          <p>
+            Vous pouvez nous contactez à l'adresse
+            <a href="mailto:info@fullyentransition.ch"
+              >info@fullyentransition.ch.</a
+            >
           </p>
         </div>
-
-        <form id="contact-form">
-          <!-- To simplify the tutorial, the value is static. -->
-          <input type="hidden" name="contact_number" value="697483" />
-          <label>Name</label>
-          <input type="text" name="user_name" />
-          <label>Email</label>
-          <input type="email" name="user_email" />
-          <label>Message</label>
-          <textarea name="message"></textarea>
-          <input type="submit" value="Send" />
-        </form>
       </div>
     </section>
   </div>
