--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -190,7 +190,7 @@
         <a class="navbar-item" href="/qui-sommes-nous">Qui sommes-nous ?</a>
         <a class="navbar-item" href="/calendrier">Calendrier</a>
         <a class="navbar-item" href="/actualites">Actualités</a>
-        <a class="navbar-item" href="/devenir-membre">Devenir Membre</a>
+        <a class="navbar-item" href="/devenir-membre">Devenir membre</a>
       </div>
 
       <div class="navbar-end">
@@ -200,7 +200,7 @@
             href="/nous-soutenir"
             style="padding-left: 0"
           >
-            Nous Soutenir
+            Nous soutenir
           </a>
           <div class="buttons">
             <a class="button is-warning" href="/contact">
