--- a/layouts/actualites/single.html
+++ b/layouts/actualites/single.html
@@ -13,7 +13,7 @@
     <p class="title has-text-primary-15">{{ .Title }}</p>
   </div>
   <div class="container has-text-centered">
-    par {{.Params.auteur}}, {{.Params.publishingDate}}
+    {{.Params.auteur}}, {{.Params.publishingDate}}
   </div>
 </section>
 
