--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,23 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      <strong> Fully en transition · 2021 - 2025 </strong>
+      <strong> Fully en Transition · 2023 - 2025 </strong>
     </p>
     <p>Rue de l'Église 14, 1926 Fully</p>
     <div class="container">
       <a href="https://www.instagram.com/fully.transition/">
         <span class="icon is-medium">
           <i class="fa-brands fa-instagram fa-2x"></i>
+        </span>
+      </a>
+      <a href="https://www.facebook.com/fully.en.transition/">
+        <span class="icon is-medium">
+          <i class="fa-brands fa-facebook fa-2x"></i>
+        </span>
+      </a>
+      <a href="https://whatsapp.com/channel/0029Vaq4P9uHVvTbqRs7C92V">
+        <span class="icon is-medium">
+          <i class="fa-brands fa-whatsapp fa-2x"></i>
         </span>
       </a>
     </div>
