--- a/layouts/home.html
+++ b/layouts/home.html
@@ -10,7 +10,7 @@
         <h1 class="title">Fully en Transition</h1>
         <p class="content is-normal">
           Fully en Transition est une association citoyenne réunissant des
-          habitants et habitantes de Fully engagés pour une commune plus
+          habitants et habitantes de Fully engagé·e·s pour une commune plus
           résiliente et solidaire. Nous œuvrons pour renforcer la résilience de
           la commune face aux défis environnementaux et sociaux en menant des
           projets collaboratifs autour de l’écoresponsabilité et de la
@@ -18,10 +18,14 @@
         </p>
         <a href="/qui-sommes-nous">En savoir plus sur l'association</a>
       </section>
+
+      <section>
+        <h1 class="title">Le Festival du Film Vert</h1>
+      </section>
       <section id="evenement" class="section">
-        <h2 class="title">Notre prochain évènement</h2>
+        <h2 class="title">Notre prochain événement</h2>
         <p class="content is-normal">
-          L'association organise de nombreux évènements durant l'année, ouverts
+          L'association organise de nombreux événements durant l'année, ouverts
           à toutes et tous !
         </p>
         <p><a href="/calendrier">Consulter notre calendrier</a></p>
@@ -29,7 +33,7 @@
       <section id="actualites" class="section">
         <h2 class="title">Actualités</h2>
         <p class="content is-normal">
-          Découvrez les dernières nouvelles de l'association
+          Découvrez les dernières nouvelles de l'association.
         </p>
         <p><a href="/actualites">Découvrir tous les articles</a></p>
       </section>
