corrected _default single

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -28,7 +28,7 @@
           L'association organise de nombreux événements durant l'année, ouverts
           à toutes et tous !
         </p>
-        <p><a href="/calendrier">Consulter notre calendrier</a></p>
+        <p><a href="/calendar">Consulter notre calendrier</a></p>
       </section>
       <section id="actualites" class="section">
         <h2 class="title">Actualités</h2>
