small corrections and add some content

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -21,6 +21,23 @@
 
       <section>
         <h1 class="title">Le Festival du Film Vert</h1>
+        <p>
+          Nous avons le plaisir de proposer des films pour le Festival du Film
+          Vert du 2 au 6 avril à la Belle Usine de Fully.
+        </p>
+
+        <p>
+          <a
+            href="https://www.festivaldufilmvert.ch/fr/programme/2025/belle-usine-a-fully"
+            >Découvrir le programme</a
+          >
+        </p>
+        <p>
+          <a
+            href="https://infomaniak.events/en-ch/shop/festival-du-film-vert-fully-2025-AD5XTNGQDX"
+            >Accéder à la billeterie</a
+          >
+        </p>
       </section>
       <section id="evenement" class="section">
         <h2 class="title">Notre prochain événement</h2>
