--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -34,7 +34,7 @@
               </div>
               <div class="content">
                 <div class="content has-text-justified">
-                  {{ .Summary | truncate 100 }}{{ if .Truncated }}[...]{{ end }}
+                  {{ .Summary | truncate 100 }}{{ if .Truncated }}{{ end }}
                 </div>
                 <br />
                 <time datetime="2016-01-01">{{ .Params.publishingDate }}</time>
