add 2 new events and add qr codes to nous-soutenir page

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -21,7 +21,7 @@
             <div class="card-image">
               <figure class="image is-3by4">
                 <img
-                  src="/calendar/{{.Params.picture}}.jpeg"
+                  src="/calendar/{{.Params.picture}}"
                   alt="Placeholder image"
                 />
               </figure>
