--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,6 +16,15 @@
   <div class="container is-max-desktop has-text-centered content">
     {{.Content}}
   </div>
+  <div class="container is-max-desktop has-text-centered">
+    <figure class="image is-inline-block" style="max-width: 400px; width: 100%">
+      <img
+        src="{{.Params.picture}}"
+        alt="Placeholder image"
+        style="width: 100%; height: auto"
+      />
+    </figure>
+  </div>
 </section>
 
 {{ end }}
