--- a/layouts/calendar/single.html
+++ b/layouts/calendar/single.html
@@ -1,7 +1,7 @@
 {{ define "body" }}
 <section
   class="hero has-background-primary-15 is-halfheight has-text-centered"
-  style="background-image: url('/calendar/{{.Params.picture}}.jpeg'); background-size: cover; background-position: center;"
+  style="background-image: url('/calendar/{{.Params.picture}}'); background-size: cover; background-position: center;"
 >
   <div class="hero-body">
     <div class="container has-text-centered"></div>
@@ -53,6 +53,15 @@
 <section class="section">
   <div class="container is-max-desktop has-text-centered content">
     {{.Content}}
+  </div>
+  <div class="container is-max-desktop has-text-centered">
+    <figure class="image is-inline-block" style="max-width: 600px; width: 100%">
+      <img
+        src="{{.Params.description_picture}}"
+        alt="Placeholder image"
+        style="width: 100%; height: auto"
+      />
+    </figure>
   </div>
 </section>
 
