--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -189,7 +189,7 @@
       <div class="navbar-start">
         <a class="navbar-item" href="/qui-sommes-nous">Qui sommes-nous ?</a>
         <a class="navbar-item" href="/calendar">Calendrier</a>
-        <a class="navbar-item" href="/actualites">Actualités</a>
+        <a class="navbar-item" href="/actualites">Projets</a>
         <a class="navbar-item" href="/devenir-membre">Devenir membre</a>
       </div>
 
