add etickets shop

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -23,20 +23,10 @@
         <h1 class="title">Le Festival du Film Vert</h1>
         <p>
           Nous avons le plaisir de proposer des films pour le Festival du Film
-          Vert du 2 au 6 avril à la Belle Usine de Fully.
-        </p>
-
-        <p>
-          <a
-            href="https://www.festivaldufilmvert.ch/fr/programme/2025/belle-usine-a-fully"
-            >Découvrir le programme</a
-          >
+          Vert du 25 au 29 mars 2026 à la Belle Usine de Fully.
         </p>
         <p>
-          <a
-            href="https://infomaniak.events/en-ch/shop/festival-du-film-vert-fully-2025-AD5XTNGQDX"
-            >Accéder à la billeterie</a
-          >
+          <a href="/billeterie">Accéder à la billeterie</a>
         </p>
       </section>
       <section id="evenement" class="section">
@@ -46,13 +36,6 @@
           à toutes et tous !
         </p>
         <p><a href="/calendar">Consulter notre calendrier</a></p>
-      </section>
-      <section id="actualites" class="section">
-        <h2 class="title">Actualités</h2>
-        <p class="content is-normal">
-          Découvrez les dernières nouvelles de l'association.
-        </p>
-        <p><a href="/actualites">Découvrir tous les articles</a></p>
       </section>
     </div>
   </div>
