--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -203,6 +203,9 @@
             Nous soutenir
           </a>
           <div class="buttons">
+            <a class="button has-text-primary-15" href="/billeterie">
+              <strong>Billeterie</strong>
+            </a>
             <a class="button is-warning" href="/contact">
               <strong>Contact</strong>
             </a>
