change header CTA color

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -203,11 +203,14 @@
             Nous soutenir
           </a>
           <div class="buttons">
-            <a class="button has-text-primary-15" href="/billeterie">
-              <strong>Billeterie</strong>
-            </a>
             <a class="button is-warning" href="/contact">
               <strong>Contact</strong>
+            </a>
+            <a
+              class="button has-background-primary-15 has-text-white"
+              href="/billeterie"
+            >
+              <strong>Billeterie</strong>
             </a>
           </div>
         </div>
